# bunny-rs

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  oauth2-tests.yml  release.yml
benchmarks/: publish_throughput.rs
src/: confirm_channel.rs  consumer.rs  credentials.rs  errors.rs  exchange.rs  lib.rs  options.rs  queue.rs  tx_channel.rs
src/channel/: mod.rs
src/connection/: endpoint.rs  handshake.rs  mod.rs  recovery.rs  topology.rs
src/protocol/: codec.rs  constants.rs  frame.rs  method.rs  mod.rs  properties.rs  types.rs
src/transport/: mod.rs  tls.rs
tests/integration/: basic_get_tests.rs  basic_reject_tests.rs  channel_error_tests.rs  channel_tests.rs  confirm_channel_tests.rs  confirm_nack_tests.rs  confirm_tests.rs  connection_blocked_tests.rs  connection_tests.rs  consumer_cancel_tests.rs  consumer_tests.rs  consumer_trait_tests.rs  credential_refresh_tests.rs  dead_letter_tests.rs  delivery_ack_tests.rs  delivery_nack_tests.rs  exchange_tests.rs  headers_exchange_tests.rs  large_payload_tests.rs  main.rs  message_properties_tests.rs  multi_consumer_tests.rs  new_features_tests.rs  oauth2_tests.rs  publish_consume_tests.rs  queue_tests.rs  recovery_tests.rs  stream_tests.rs  subscribe_with_tests.rs  test_helpers.rs  tls_tests.rs  tx_channel_tests.rs  tx_tests.rs  update_secret_tests.rs  wait_for_confirms_tests.rs
tests/oauth2/: rabbitmq-ci.conf  rabbitmq.conf
tests/proptests/: main.rs  prop_ack_methods.rs  prop_confirm.rs  prop_consumer_tag.rs  prop_endpoint.rs  prop_field_table.rs  prop_frame.rs  prop_heartbeat.rs  prop_method.rs  prop_properties.rs  prop_subscribe_options.rs  prop_topology.rs
